--- a/src/WebApp/Views/SuitAlteration/Index.cshtml
+++ b/src/WebApp/Views/SuitAlteration/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ApplicationLayer.ReadModels.SuitAlterationReadModel>
+﻿@model IEnumerable<WebApp.Models.SuitAlterationViewModel>
 @{
     ViewData["Title"] = "Suit Alterations";
 }
@@ -20,6 +20,9 @@
             <th>
                 Status
             </th>
+            <th>
+                LastModified
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -37,6 +40,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastModified)
                 </td>
                 <td>
                     @if (item.Status == "created" || item.Status == "paid")
