--- a/src/WebApp/Views/SuitAlteration/NewSuitAlteration.cshtml
+++ b/src/WebApp/Views/SuitAlteration/NewSuitAlteration.cshtml
@@ -14,7 +14,7 @@
             <label asp-for="SuitName" class="control-label"></label>
             <input asp-for="SuitName" class="form-control" />
         </div>
-        @Html.DropDownList("AlterationType", Html.GetEnumSelectList<NewSuitAlterationType>(), "Select Alteration Type", new { @class = "form-control" });
+        @Html.DropDownList("AlterationType", Html.GetEnumSelectList<NewSuitAlterationType>(), "Select Alteration Type", new { @class = "form-control" })
         <input type="submit" value="Create" />
     </form>
 </div>
